enhancements
Added Http layer, modified api layer, replaced DAO with Exposed DSL